Fixed color contrast error

--- a/styles/base.css
+++ b/styles/base.css
@@ -24,6 +24,7 @@ header {
 
 nav {
   background-color: #333;
+  color: var(--text-color);
   margin: 0 auto;
   width: 100%;
 }
